--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,9 @@
 		</div>
 		<div class="score_selector">
 			<div class='mbid_selector'>
-				<select id="selectButton">Choose score</select>
+				<select id="selectButton">
+					<option selected="selected">Choose mbid...</option>
+				</select>
 			</div>
 			<div class="button_to_plot_score">
 				<button type="button" onclick="plotScoreWithPatterns()">Plot score with patterns</button>
