Wait until score file is created and resize web page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Nawba Tree</title>
+		<title>Arab-Andalusian Patterns</title>
 		<link rel="icon" href="data:;base64,=">
 		<link href="../static/style.css" rel="stylesheet" type="text/css">
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -105,7 +105,7 @@
 							target="_blank">MelodyShape tool</a> from Julián Urbano was used to compute melodic similarity between patterns
 				</p>
 				<p style="padding-left: 50px">
-					For more information about the Arab-Andalusian dataset, please refer to <a href="https://dunya.compmusic.upf.edu/andalusian/info" title="Dunya" target="_blank">Dunya webpage</a>
+					For more information about the Arab-Andalusian dataset, please refer to <a href="https://dunya.compmusic.upf.edu/andalusian/info" title="Dunya" target="_blank">Dunya web page</a>
 				</p>
 				<p style="padding-left: 50px">
 					Icons made by <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons" target="_blank">Those Icons</a>
