--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- <html lang="en"> -->
 	<head>
 		<meta charset="utf-8">
 		<title>Arab-Andalusian Patterns</title>
@@ -112,4 +112,4 @@
 				</p>
 		</footer>
 	</body>
-</html>
+<!-- </html> -->
