add al-ussaq to nawba family

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,16 +64,16 @@
 		<div class="nawba_selector">
 			<div class="family_selector">
 			<label>
-			<input type="checkbox" name="checkbfamily" id= "dhil" value="dhil" >Dhil
+			<input type="checkbox" name="checkbfamily" id= "dhil" value="dhil" >al-Dzayl
 			</label>
 			<label>
-			<input type="checkbox" name="checkbfamily" id= "zaydan" value="zaydan" >Zaydan
+			<input type="checkbox" name="checkbfamily" id= "zaydan" value="zaydan" >al-Zaydân
 			</label>
 			<label>
-			<input type="checkbox" name="checkbfamily" id= "maya" value="maya" >Maya
+			<input type="checkbox" name="checkbfamily" id= "maya" value="maya" >al-Mâya
 			</label>
 			<label>
-			<input type="checkbox" name="checkbfamily" id= "mzmum" value="mzmum" >Mzmum
+			<input type="checkbox" name="checkbfamily" id= "mzmum" value="mzmum" >al-Mazmûm
 			</label>
 			</div>
 			<div class="nawba_chooser"></div>
